# fluidnet

./: README.md  pyproject.toml
src/: aux_func.py  fluid_functions.py  network.py  optimizer.py
src/fluidnet/: edges.py  fluid_functions.py  network.py  network_objects.py
src/fluidnet/models/: base.py  darcy_weisbach  numericals.py
src/fluidnet/utils/: fluid_functions.py
tests/: common.py  test_aux_func.py  test_fluid_functions.py  test_network_1.py  test_network_2.py  test_network_3.py  test_optimizer_1.py
